first section done

--- a/src/index.html
+++ b/src/index.html
@@ -24,12 +24,57 @@
                     </ul>
                 </nav>
                 <div class="header__phone">
-                    <div>Есть вопросы?</div>
+                    <div class ="header__phone_descr">Есть вопросы?</div>
                     <a href="tel:89264230100" class="header__phone_call">+7 (926) 423 01 00</a>
                 </div>
-                <button class="header__btn">Перезвоните мне</button>
+                <button class="button button_call">Перезвоните мне</button>
+            </div>
+
+            <div class="header__promo">
+                <div class="header__promo_descr">Global Opt - логистика полного цикла из Китая в Россию</div>
+                <h1 class="header__promo_title">ДОСТАВКА ГРУЗОВ ИЗ КИТАЯ<h1>
+                <div class="header__promo_subtitle">В РОССИЮ И СНГ ВСЕМИ ВИДАМИ ТРАНСПОРТА</div>
+                <div class="header__line">
+                    <hr>
+                    <div></div>
+                    <hr>
+                </div>
+                <div class="header__card_wraper">
+                    <div class="header__card">
+                        <div class="header__card_img">
+                            <img src="/icons/cargo.png" alt="cargo">
+                        </div>
+                        <div class="header__card_descr">Перевозка негабаритных и крупнотоннажных грузов</div>
+                    </div>
+                    <div class="header__card">
+                        <div class="header__card_img">
+                            <img src="/icons/code.png" alt="code">
+                        </div>
+                        <div class="header__card_descr">Самостоятельно декларируем и проводим таможенную очистку с оптимизацией кодов и ставок</div>
+                    </div>
+                    <div class="header__card">
+                        <div class="header__card_img">
+                            <img src="/icons/delivery.png" alt="delivery">
+                        </div>
+                        <div class="header__card_descr">Осуществляем прямые поставки с заводов от двери до двери</div>
+                    </div>
+                    <div class="header__card">
+                        <div class="header__card_img">
+                            <img src="/icons/express.png" alt="express">
+                        </div>
+                        <div class="header__card_descr">Экспресс доставка 1-2 дня из Гуанчжоу в Москву от 25$/кг</div>
+                    </div>
+                </div>
+                <button class="button button_calc">Получить расчет</button>
             </div>
         </div>
     </section>
+
+    <section class="advantages">
+        <div class="container">
+
+        </div>
+    </section>
+
 </body>
 </html>
