second section done

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,81 @@
 
     <section class="advantages">
         <div class="container">
-
+            <h2 class="subtitle">Преимущества работы с GlobalOpt</h2>
+            <div class="advantages__list">
+                <div class="advantages__list_item">
+                    <div class="advantages__list_item-img">
+                        <img src="/icons/office.png" alt="office">
+                    </div>
+                    <div class="advantages__list_item-wrap">
+                        <h2 class="advantages__list_item-subtitle">Офисы в Китае и России</h2>
+                        <div class="advantages__list_item-descr">Офисы расположены в Москве, столице России.  И в Гуанчжоу, мировом торговом мегаполисе Китая.</div>
+                    </div>
+                </div>
+                <div class="advantages__list_item">
+                    <div class="advantages__list_item-img">
+                        <img src="/icons/personal.png" alt="personal">
+                    </div>
+                    <div class="advantages__list_item-wrap">
+                        <h2 class="advantages__list_item-subtitle">Квалифицированные кадры</h2>
+                        <div class="advantages__list_item-descr">Наши сотрудники имеют большой опыт в логистике с Китаем и в совершенстве владеют китайским и английским языками.</div>
+                    </div>
+                </div>
+                <div class="advantages__list_item">
+                    <div class="advantages__list_item-img">
+                        <img src="/icons/wharehouse.png" alt="wharehouse">
+                    </div>
+                    <div class="advantages__list_item-wrap">
+                        <h2 class="advantages__list_item-subtitle">Собственный склад в Китае</h2>
+                        <div class="advantages__list_item-descr">Свой склад в Китае, позволяет собирать и проверять и упаковывать  ваши товары, перед отправкой.</div>
+                    </div>
+                </div>
+                <div class="advantages__list_item">
+                    <div class="advantages__list_item-img">
+                        <img src="/icons/shipments.png" alt="shipments">
+                    </div>
+                    <div class="advantages__list_item-wrap">
+                        <h2 class="advantages__list_item-subtitle">Делаем оптовые поставки под ключ</h2>
+                        <div class="advantages__list_item-descr">Берём на себя все заботы связанные с  закупкой, проверкой на качество, логистикой и растаможкой. От вас требуется лишь заполнить техническое задание, одобрить  образцы товаров и после принять товар на своём складе!</div>
+                    </div>
+                </div>
+                <div class="advantages__list_item">
+                    <div class="advantages__list_item-img">
+                        <img src="/icons/declaration.png" alt="declaration">
+                    </div>
+                    <div class="advantages__list_item-wrap">
+                        <h2 class="advantages__list_item-subtitle">Декларируем груз с оптимизацией</h2>
+                        <div class="advantages__list_item-descr">Идем на встречу своим клиентам и помогаем растаможить груз с оптимизацией кодов и ставок.</div>
+                    </div>
+                </div>
+                <div class="advantages__list_item">
+                    <div class="advantages__list_item-img">
+                        <img src="/icons/search.png" alt="search">
+                    </div>
+                    <div class="advantages__list_item-wrap">
+                        <h2 class="advantages__list_item-subtitle">Осуществляем поиск производителей</h2>
+                        <div class="advantages__list_item-descr">Помогаем нашим клиентам найти интересующий вас товар или производителя в Китае.</div>
+                    </div>
+                </div>
+                <div class="advantages__list_item">
+                    <div class="advantages__list_item-img">
+                        <img src="/icons/transfer.png" alt="transfer">
+                    </div>
+                    <div class="advantages__list_item-wrap">
+                        <h2 class="advantages__list_item-subtitle">Перевод денег в Китай</h2>
+                        <div class="advantages__list_item-descr">Помогаем переводить и оплачивать товар в Китае на льготных условиях</div>
+                    </div>
+                </div>
+                <div class="advantages__list_item">
+                    <div class="advantages__list_item-img">
+                        <img src="/icons/trip.png" alt="trip">
+                    </div>
+                    <div class="advantages__list_item-wrap">
+                        <h2 class="advantages__list_item-subtitle">Поездка на производство в Китай</h2>
+                        <div class="advantages__list_item-descr">У нас большой опыт в бизнес поездках по Китаю. Мы с большой радостью и желанием организуем вам такую поездку в Китай под ключ. Сделаем визу, трансфер из аэропорта, забронируем отель, предоставим переводчика. Организуем поездку на производство. Шоп тур. Мебельный тур.</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
