third section done

--- a/src/index.html
+++ b/src/index.html
@@ -150,5 +150,36 @@
         </div>
     </section>
 
+    <section class="job">
+        <div class="container">
+            <h2 class="subtitle">Наша работа - больше чем просто доставка</h2>
+            <hr class="job__line">
+            <div class="job__descr">Мы организуем перевозки из Китая - оперативно и надежно, с учетом особенностей груза <br> и ваших требований по срокам и бюджет</div>
+            <div class="job__promo">
+                <div class="job__promo_item">
+                    <div class="job__promo_item-img">
+                        <img src="/img/insurance.jpg" alt="insurance">
+                    </div>
+                    <div class="job__promo_item-subtitle">Страховка груза</div>
+                    <div class="job__promo_item-descr">Все грузы, логистику которых осуществляет Global Opt, застрахованы. Мы гарантируем полное возмещение стоимости груза в случаях, предусмотренных страхо- вым соглашением. Все ваши тревоги наша компания берет на себя.</div>
+                </div>
+                <div class="job__promo_item">
+                    <div class="job__promo_item-img">
+                        <img src="/img/logistics.jpg" alt="logistics">
+                    </div>
+                    <div class="job__promo_item-subtitle">Логистика последней мили</div>
+                    <div class="job__promo_item-descr">Мы осуществляем доставку вашего груза до конкретного адреса. Привоз согласовывается менед- жерами по телефону, предварительно за сутки и за час до доставки. Также мы предоставляем услуги грузчи ков по месту доставки груза.</div>
+                </div>
+                <div class="job__promo_item">
+                    <div class="job__promo_item-img">
+                        <img src="/img/forward.jpg" alt="forward">
+                    </div>
+                    <div class="job__promo_item-subtitle">Мы всегда смотрим вперед</div>
+                    <div class="job__promo_item-descr">Философия нашей компании, делать себя и своих партнеров по всему миру, успешными и богатыми. Поэтому мы всегда открыты к диалогу о партнерстве и инвестициях.</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
