--- a/src/index.html
+++ b/src/index.html
@@ -27,12 +27,12 @@
                     <div class ="header__phone_descr">Есть вопросы?</div>
                     <a href="tel:89264230100" class="header__phone_call">+7 (926) 423 01 00</a>
                 </div>
-                <button class="button button_call">Перезвоните мне</button>
+                <button class="button">Перезвоните мне</button>
             </div>
 
             <div class="header__promo">
                 <div class="header__promo_descr">Global Opt - логистика полного цикла из Китая в Россию</div>
-                <h1 class="header__promo_title">ДОСТАВКА ГРУЗОВ ИЗ КИТАЯ<h1>
+                <h1 class="header__promo_title">ДОСТАВКА ГРУЗОВ ИЗ КИТАЯ</h1>
                 <div class="header__promo_subtitle">В РОССИЮ И СНГ ВСЕМИ ВИДАМИ ТРАНСПОРТА</div>
                 <div class="header__line">
                     <hr>
@@ -72,7 +72,7 @@
 
     <section class="advantages">
         <div class="container">
-            <h2 class="subtitle">Преимущества работы с GlobalOpt</h2>
+            <h2 class="subtitle-block__promo">Преимущества работы с GlobalOpt</h2>
             <div class="advantages__list">
                 <div class="advantages__list_item">
                     <div class="advantages__list_item-img">
@@ -152,9 +152,11 @@
 
     <section class="job">
         <div class="container">
-            <h2 class="subtitle">Наша работа - больше чем просто доставка</h2>
-            <hr class="job__line">
-            <div class="job__descr">Мы организуем перевозки из Китая - оперативно и надежно, с учетом особенностей груза <br> и ваших требований по срокам и бюджет</div>
+            <div class="subtitle-block">
+                <h2 class="subtitle-block__promo">Наша работа - больше чем просто доставка</h2>
+                <hr class="subtitle-block__line">
+                <div class="subtitle-block__descr">Мы организуем перевозки из Китая - оперативно и надежно, с учетом особенностей груза<br>и ваших требований по срокам и бюджету.</div>
+            </div>
             <div class="job__promo">
                 <div class="job__promo_item">
                     <div class="job__promo_item-img">
@@ -176,6 +178,136 @@
                     </div>
                     <div class="job__promo_item-subtitle">Мы всегда смотрим вперед</div>
                     <div class="job__promo_item-descr">Философия нашей компании, делать себя и своих партнеров по всему миру, успешными и богатыми. Поэтому мы всегда открыты к диалогу о партнерстве и инвестициях.</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="promo promo_agent">
+        <div class="container">
+            <div class="promo__ico">
+                <img src="/icons/agent.png" alt="agent">
+            </div>
+            <h2 class="promo__subtitle">Агент в Китае</h2>
+            <div class="promo__descr">Русскоговорящие представители компании без труда найдут именно тот товар, который будет отвечать Вашим запросам как по качеству, так и по цене.</div>
+        </div>
+    </section>
+
+    <section class="cost">
+        <div class="container">
+            <div class="subtitle-block">
+                <h2 class="subtitle-block__promo">Цены на любой вариант доставки</h2>
+                <hr class="subtitle-block__line">
+                <div class="subtitle-block__descr">Перевозки грузов на дальние расстояния без каких-либо ограничений.<br>Любой груз доставим вовремя. </div>
+            </div>
+            <div class="cost__items">
+                <div class="cost__items__card">
+                    <div class="cost__items__card_header">Доставка морем</div>
+                    <div class="cost__items__card_img"><img src="/icons/ship.png" alt="ship"></div>
+                    <div class="cost__items__card_subtitle">Доставка 35-50 дней</div>
+                    <div class="cost__items__card_price">от 0,3$ за 1 кг</div>
+                    <div class="cost__items__card_descr">Морские перевозки грузов из Китая в Россию за 35 дней с прохождением таможни </div>
+                    <button class="button button_cost">Подробнее</button>
+                </div>
+                <div class="cost__items__card">
+                    <div class="cost__items__card_header">Ж/Д доставка</div>
+                    <div class="cost__items__card_img"><img src="/icons/train.png" alt="train"></div>
+                    <div class="cost__items__card_subtitle">Доставка 15-28 дней</div>
+                    <div class="cost__items__card_price">от 1$ за 1 кг</div>
+                    <div class="cost__items__card_descr">ЖД перевозки грузов из Китая в Россию от 2 недель с прохождением таможни </div>
+                    <button class="button button_cost">Подробнее</button>
+                </div>
+                <div class="cost__items__card">
+                    <div class="cost__items__card_header">Автодоставка</div>
+                    <div class="cost__items__card_img"><img src="/icons/auto.png" alt="auto"></div>
+                    <div class="cost__items__card_subtitle">Доставка 12-20 дня</div>
+                    <div class="cost__items__card_price">от 1$ за 1 кг</div>
+                    <div class="cost__items__card_descr">Автоперевозки грузов из Китая в Россию от 2 недель с прохождением таможни</div>
+                    <button class="button button_cost">Подробнее</button>
+                </div>
+                <div class="cost__items__card">
+                    <div class="cost__items__card_header">Авиа доставка</div>
+                    <div class="cost__items__card_img"><img src="/icons/airplane.png" alt="airplane"></div>
+                    <div class="cost__items__card_subtitle">Доставка 1-12 дней</div>
+                    <div class="cost__items__card_price">от 6$ за 1 кг</div>
+                    <div class="cost__items__card_descr">Авиаперевозки грузов из Китая в Россию до 2 недель с прохождением таможни</div>
+                    <button class="button button_cost">Подробнее</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="consultation">
+        <div class="container">
+            <h2 class="consultation__title">Заказать бесплатную консультацию</h2>
+            <div class="consultation__wrapper">
+                <div class="consultation__img consultation__img-border">
+                    <div class="consultation__img">
+                        <img src="/icons/consult.png" alt="consultant">
+                    </div>
+                </div>
+                <form id="consultation-form" class="feed-form" action="#">
+                    <input name="name" required placeholder="Ваше имя" type="text">
+                    <input name="phone" required placeholder="Ваш номер телефона">
+                    <input name="email" required placeholder="Ваш E-mail" type="email">
+                    <!-- <button class="button button_border">отправить заявку</button> -->
+                </form>
+                <button class="button button_border">отправить заявку</button>
+                <div class="consultation-form__border"></div>
+            </div>
+            
+        </div>
+    </section>
+
+    <section class="promo promo_agent">
+        <div class="container">
+            <div class="promo__ico">
+                <img src="/icons/managers.png" alt="managers">
+            </div>
+            <h2 class="promo__subtitle">Менеджеры компании</h2>
+            <div class="promo__descr">Подберут для Вас оптимальную схему грузоперевозки. Проведут контроль закупок, организуют прямые
+                поставки от завода-изготовителя.</div>
+        </div>
+    </section>
+
+    <section class="schema">
+        <div class="container">
+            <h2 class="subtitle-block__promo">Схема работы с нами</h2>
+            <div class="schema__items-wrapper">
+                <div class="schema__item">
+                    <div class="schema__item_img"><img src="/icons/appli.png" alt="appli"></div>
+                    <div class="schema__item_title">Заявка</div>
+                    <div class="schema__item_descr">Вы оставляете заявку на нашем сайте или звоните нам</div>
+                </div>
+                <div class="schema__item">
+                    <div class="schema__item_img"><img src="/icons/analitic.png" alt="analitic"></div>
+                    <div class="schema__item_title">Аналитика доставки</div>
+                    <div class="schema__item_descr">Мы просчитываем варианты доставки Вашего груза</div>
+                </div>
+                <div class="schema__item">
+                    <div class="schema__item_img"><img src="/icons/contract.png" alt="contract"></div>
+                    <div class="schema__item_title">Договор</div>
+                    <div class="schema__item_descr">Заключаем с Вами договор о поставке груза из Китая</div>
+                </div>
+                <div class="schema__item">
+                    <div class="schema__item_img"><img src="/icons/reposit.png" alt="reposit"></div>
+                    <div class="schema__item_title">Доставка на наш склад</div>
+                    <div class="schema__item_descr">Связываемся с Вашим поставщиком в Китае и договариваемся о доставке груза на наш склад </div>
+                </div>
+                <div class="schema__item">
+                    <div class="schema__item_img"><img src="/icons/chek.png" alt="chek"></div>
+                    <div class="schema__item_title">Проверка груза</div>
+                    <div class="schema__item_descr">Мы проверяем, собираем и упаковываем перед отправкой Ваш груз на своём складе</div>
+                </div>
+                <div class="schema__item">
+                    <div class="schema__item_img"><img src="/icons/transit.png" alt="transit"></div>
+                    <div class="schema__item_title">Доставка груза</div>
+                    <div class="schema__item_descr">Мы перевозим ваш груз до места назначения и производим таможенную очистку</div>
+                </div>
+                <div class="schema__item">
+                    <div class="schema__item_img"><img src="/icons/pay.png" alt="pay"></div>
+                    <div class="schema__item_title">Оплата</div>
+                    <div class="schema__item_descr">Оплачиваете доставку груза при получении</div>
                 </div>
             </div>
         </div>
