--- a/src/index.html
+++ b/src/index.html
@@ -313,5 +313,37 @@
         </div>
     </section>
 
+    <section class="feeds">
+        <div class="container">
+            <div class="subtitle-block">
+                <h2 class="subtitle-block__promo">отзывы наших клиентов</h2>
+                <hr class="subtitle-block__line">
+                <div class="subtitle-block__descr">Мы всегда стараемся помочь клиентам, что бы они обращались к нам снова</div>
+            </div>
+            <div class="carousel">
+                <div class="carousel__item">
+                    <div class="carousel__item_img"><img src="/icons/feed_1.png" alt="feed_1"></div>
+                    <h2 class="carousel__item_title">Анисимова Ольга</h2>
+                    <div class="carousel__item_descr">Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользтваьбся услугами даной компании</div>
+                </div>
+                <div class="carousel__item">
+                    <div class="carousel__item_img"><img src="/icons/feed_1.png" alt="feed_1"></div>
+                    <h2 class="carousel__item_title">Анисимова Ольга</h2>
+                    <div class="carousel__item_descr">Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользтваьбся услугами даной компании</div>
+                </div>
+                <div class="carousel__item">
+                    <div class="carousel__item_img"><img src="/icons/feed_1.png" alt="feed_1"></div>
+                    <h2 class="carousel__item_title">Анисимова Ольга</h2>
+                    <div class="carousel__item_descr">Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользтваьбся услугами даной компании</div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/slick.min.js"></script>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
